tests/errors/compiler/bad_escape_sym/escape_sym_in_printf.c
int main()
{
	printf("qwe\d");
	return 0;
}